--- a/apache/000-default.conf
+++ b/apache/000-default.conf
@@ -3,24 +3,16 @@
     DocumentRoot /var/www/html
 
     <Directory /var/www/html>
+        # This is the standard, simple configuration
         Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
     </Directory>
-
+    
     # --- THIS IS THE FIX ---
-    # This configuration correctly forwards all requests to index.php
-    # and preserves the query string (like ?id=5).
-    
-    RewriteEngine On
-    
-    # If the request is not for an existing file...
-    RewriteCond %{REQUEST_FILENAME} !-f
-    # And it's not for an existing directory...
-    RewriteCond %{REQUEST_FILENAME} !-d
-    # Then rewrite the request to index.php, appending the query string [QSA]
-    RewriteRule . /index.php [L,QSA]
-    # --- END OF FIX ---
+    # We remove the RewriteRule and just tell Apache
+    # to look for 'index.php' if a directory is requested.
+    DirectoryIndex index.php
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
